objects/CRM_CampaignAudienceHistory__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Audience History</relationshipLabel>
        <relationshipName>Campaign_Audience_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_ControlGroup__c</fullName>
        <label>Control Group</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Hospital__c</fullName>
        <label>Hospital</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_LIstOrderId__c</fullName>
        <label>LIst Order Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Audience History</relationshipLabel>
        <relationshipName>Campaign_Audience_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_ParentCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Audience History (Parent Campaign)</relationshipLabel>
        <relationshipName>CRM_CampaignAudienceHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Segment__c</fullName>
        <label>Segment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Supression__c</fullName>
        <label>Supression</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WundermanID__c</fullName>
        <label>Wunderman ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_ZipCode__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Campaign Audience History</label>
    <nameField>
        <displayFormat>CAH-{0000000000}</displayFormat>
        <label>Campaign Audience History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Audience History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>